chore: make code style consistent